src/components/shared/Tooltip/tooltip.module.css
.wrapingTooltip,
.tooltip {
    position: absolute;
    z-index: 1000;
    display: flex;
    align-items: center;
    background-color: #49494a;
    color: white;
    font-size: 12px;
    font-weight: normal;
    white-space: nowrap;
}

.wrapingTooltip {
    padding: 4px 5px;
    border-radius: 7px;
    gap: 5px;
}

.tooltip {
    padding: 4px 4px 4px 8px;
    border-radius: 8px;
    backdrop-filter: blur(16px);
    gap: 6px;
    transform: translate3d(5.12px, 52.16px, 0px);
    transform-origin: top;
    transition-duration: 100ms;
}

.tooltip.top,
.wrapingTooltip.top {
    transform: translateX(-50%);
    bottom: calc(100% + 3px);
    left: 50%;
}

.tooltip.bottom,
.wrapingTooltip.bottom {
    transform: translateX(-50%);
    top: calc(100% + 3px);
    left: 50%;
}

.tooltip.left,
.wrapingTooltip.left {
    transform: translateY(-50%);
    right: calc(100% + 3px);
    top: 50%;
}

.tooltip.right,
.wrapingTooltip.right {
    transform: translateY(-50%);
    left: calc(100% + 3px);
    top: 50%;
}

.wrappingKeys {
    display: flex;
    gap: 3px;
    font-size: 10px;
    font-weight: 500;
}

.wrappingKey {
    padding: 2px 4px;
    border-radius: 4px;
    background-color: rgba(255, 255, 255, 0.2);
}

.keys {
    display: flex;
    font-size: 10px;
    font-weight: 500;
}

.key {
    padding: 2px 4px;
    border-radius: 4px;
    background-color: rgba(255, 255, 255, 0.2);
    margin-left: 2px;
}

